# wgpu-game-of-life

./: Cargo.toml
src/: camera.rs  gui.rs  main.rs  perf_monitor.rs  shaders.wgsl
src/drawing/: mod.rs
src/game_of_life/: mod.rs  shaders.wgsl
src/game_of_life_compute/: mod.rs  shaders.wgsl
src/game_of_life_frag/: mod.rs  shaders.wgsl
src/gol/: mod.rs
src/gol_manager/: camera.rs  gui_adder.rs  gui_renderer.rs  mod.rs  patterns.rs
src/gol_renderer/: mod.rs  shaders.wgsl
src/gui/: mod.rs
src/gui_adder/: mod.rs
src/gui_renderer/: mod.rs
src/renderer/: mod.rs  shaders.wgsl
