[package]
name = "wgpu-game-of-life"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
pollster = "0.4.0"
env_logger = "0.10"
log = "0.4"
glam = "0.29.2"
rand = "0.8.5"
futures-intrusive = "0.5.0"
#egui-wgpu reexports wgpu, this is why wgpu is not listed in deps
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
egui = "0.30.0"
winit = { version = "0.30.7", features = ["rwh_05"] }

